--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,32 @@
-
 {
   "name": "BabyList",
   "short_name": "BabyList",
-  "description": "Track your baby's daily activities with ease.",
+  "id": "/?source=pwa",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#f0e8f9",
+  "background_color": "#E6E6FA",
+  "theme_color": "#E6E6FA",
+  "description": "Suivez les activités quotidiennes de votre bébé avec facilité.",
+  "lang": "fr-FR",
+  "dir": "ltr",
+  "orientation": "portrait-primary",
+  "categories": ["lifestyle", "parenting", "medical", "productivity"],
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  },
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
